Update build configs with jdk11, per info from fengbin fang.